# FragranticaParfumoMigrator

./: .gitignore  README.md  pyproject.toml
migrator/: __init__.py  base_scraper.py  base_submitter.py  browser.py  cli.py  exceptions.py  fuzzy.py  migrator.py  models.py  registry.py  reporter.py  review_scraper.py  review_submitter.py
tests/: test_authenticate_unit.py  test_cli_unit.py  test_fuzzy_property.py  test_migrator_property.py  test_migrator_unit.py  test_registry_property.py  test_registry_unit.py  test_reporter_property.py  test_reporter_unit.py  test_review_scraper_property.py  test_review_scraper_unit.py  test_review_submitter_property.py  test_review_submitter_routing_property.py  test_review_submitter_statement_property.py  test_review_submitter_unit.py
tests/__snapshots__/: in_practice_review_page.html  light_blue_parfumo_page.html  light_blue_parfumo_search.html  light_blue_parfumo_write_review.html  light_blue_parfumo_write_statement.html  member_1186668_reviews.html  parfumo_home_page_log_in_assume_user.html  parfumo_home_page_log_in_prompt.html  parfumo_home_page_not_logged_in.html
